create lms skinny banner

--- a/pegasus/sites.v3/code.org/public/administrators.haml
+++ b/pegasus/sites.v3/code.org/public/administrators.haml
@@ -20,7 +20,7 @@ theme: responsive_full_width
       %img.rounded-corners.box-shadow-primary{src: "/images/admins-page-top.png", alt: "", style: "position: relative; width: 100%;"}
     .clear
 
-= view :section_divider_line
+= view :lms_skinny_banner
 
 %section.why-teach-cs
   .wrapper
