--- a/pegasus/sites.v3/code.org/public/teach.haml
+++ b/pegasus/sites.v3/code.org/public/teach.haml
@@ -19,10 +19,7 @@ theme: responsive_full_width
       %img.rounded-corners.box-shadow-primary{src: "/images/teach-page-top.png", alt: "", style: "position: relative; width: 100%;"}
     .clear
 
-= view :poetry_banner
-
-// TODO - Remove this once the Music Lab launch is over
-= view :"music/music_lab_skinny_banner"
+= view :lms_skinny_banner
 
 %section.why-teach-cs.bg-neutral-light
   .wrapper
