--- a/pegasus/sites.v3/code.org/views/lms/lms_additional_resources.haml
+++ b/pegasus/sites.v3/code.org/views/lms/lms_additional_resources.haml
@@ -4,7 +4,7 @@
       title:hoc_s("poetry_page.additional_resources.curriculum_catalog.title"),
       image: "/images/lms/computer.png",
       desc: hoc_s("tools_pages_shared.resources.catalog.desc"),
-      url: "studio.code.org/catalog",
+      url: "https://studio.code.org/catalog",
       button_label: hoc_s("poetry_page.additional_resources.curriculum_catalog.button_label")
     },
     {
