--- a/pegasus/sites.v3/code.org/views/lms/lms_provider_cards.haml
+++ b/pegasus/sites.v3/code.org/views/lms/lms_provider_cards.haml
@@ -15,13 +15,13 @@
     {
       image: "/images/lms/canvas.png",
       title: "Canvas",
-      url: "code.org/lms/canvas",
+      url: "/lms/canvas",
       is_new: "true"
     },
     {
       image: "/images/lms/schoology.png",
       title: "Schoology",
-      url: "code.org/lms/schoology",
+      url: "/lms/schoology",
       is_new: "true"
     },
   ]
