--- a/pegasus/sites.v3/code.org/views/lms/lms_provider_cards.haml
+++ b/pegasus/sites.v3/code.org/views/lms/lms_provider_cards.haml
@@ -34,7 +34,7 @@
           %p.new.top-right
             =hoc_s(:new)
         %figure
-          %img{src: "#{card_list[:image]}", alt: ""}
+          %img{src: card_list[:image], alt: ""}
         .text-wrapper
           %h4.heading-xs
             = card_list[:title]
