--- a/pegasus/sites.v3/code.org/views/lms/lms_sso_cards.haml
+++ b/pegasus/sites.v3/code.org/views/lms/lms_sso_cards.haml
@@ -19,6 +19,6 @@
     .action-block.action-block--one-col.flex-space-between.white
       .content-wrapper
         %figure.sso-card
-          %img{style: "width: 40px; height: 40px;", src: "#{card_list[:image]}", alt: ""}
+          %img{style: "width: 40px; height: 40px;", src: card_list[:image], alt: ""}
           %h4.heading-xs
             = card_list[:title]
