--- a/pegasus/sites.v3/code.org/public/lms.haml
+++ b/pegasus/sites.v3/code.org/public/lms.haml
@@ -8,7 +8,7 @@ theme: responsive_full_width
 
 %section.top
   .wrapper
-    .text-wrapper.col-50.pad
+    .text-wrapper.col-50
       %h1=hoc_s("lms_page.heading")
       %p.body-two
         =hoc_s("lms_page.top_desc")
