--- a/apps/src/templates/sectionProgressV2/progress-table-v2.module.scss
+++ b/apps/src/templates/sectionProgressV2/progress-table-v2.module.scss
@@ -92,6 +92,13 @@ $level-cell-width: 52;
     line-height: 47px !important;
   }
 
+  &Metadata {
+    text-align: center;
+    height: 28px;
+    line-height: 28px;
+    font-size: 14px;
+  }
+
   &Skeleton {
     vertical-align: middle;
   }
@@ -450,4 +457,9 @@ $level-cell-width: 52;
   padding-left: 12px;
   padding-right: 12px;
   font-size: 14px;
+}
+
+.lessonDataCellExpanded {
+  display: flex;
+  flex-direction: column;
 }
