only show divider when flag is off

--- a/pegasus/sites.v3/code.org/public/administrators.haml
+++ b/pegasus/sites.v3/code.org/public/administrators.haml
@@ -20,6 +20,9 @@ theme: responsive_full_width
       %img.rounded-corners.box-shadow-primary{src: "/images/admins-page-top.png", alt: "", style: "position: relative; width: 100%;"}
     .clear
 
+- if !DCDO.get('show-updated-lms-content', false)
+  = view :section_divider_line
+
 = view :lms_skinny_banner
 
 %section.why-teach-cs
