--- a/pegasus/sites.v3/code.org/public/teach.haml
+++ b/pegasus/sites.v3/code.org/public/teach.haml
@@ -21,6 +21,9 @@ theme: responsive_full_width
 
 = view :lms_skinny_banner
 
+// TODO - Remove this once the Music Lab launch is over	
+= view :"music/music_lab_skinny_banner"
+
 %section.why-teach-cs.bg-neutral-light
   .wrapper
     %h2.centered
