--- a/pegasus/sites.v3/code.org/public/css/lms-skinny-banner.scss
+++ b/pegasus/sites.v3/code.org/public/css/lms-skinny-banner.scss
@@ -1,38 +1,46 @@
+$width-sm: 640px;
+
 .lms-banner {
   background: url('/images/banners/banner-lms-pattern.png') center center;
   background-color: #292F36;
+  background-size: cover;
+  padding: 2rem;
 
   .wrapper {
-    max-width: 992px;
+    max-width: 960px;
     margin: 0 auto;
-    padding: 2rem 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     gap: 5rem;
 
-    @media (max-width: 640px) {
+    @media (max-width: 900px) {
+      gap: 2rem;
+    }
+
+    @media (max-width: $width-sm) {
+      padding-block: 2rem;
       flex-direction: column;
       justify-content: center;
-      gap: 0;
+      gap: 1rem;
     }
   }
 
   .text-wrapper {
     flex: 2;
+    align-items: center;
 
-    @media (max-width: 640px) {
+    @media (max-width: $width-sm) {
       text-align: center;
     }
   }
 
   img {
     max-width: 12rem;
-    flex: 1;
-  }
-
-  a.link-button {
-    flex: 1;
+    
+    @media (max-width: $width-sm) {
+      align-self: center;
+    }
   }
 }
