--- a/pegasus/sites.v3/code.org/public/administrators.haml
+++ b/pegasus/sites.v3/code.org/public/administrators.haml
@@ -23,7 +23,7 @@ theme: responsive_full_width
 - if !DCDO.get('show-updated-lms-content', false)
   = view :section_divider_line
 
-= view :lms_skinny_banner
+= view :"lms/lms_skinny_banner"
 
 %section.why-teach-cs
   .wrapper
@@ -91,7 +91,7 @@ theme: responsive_full_width
   .wrapper
     = view :"administrators/admins_subscribe_form"
 
-= view :lms_integrations_banner
+= view :"lms/lms_integrations_banner"
 
 %section
   .wrapper
