--- a/pegasus/sites.v3/code.org/views/how_ai_works_resources.haml
+++ b/pegasus/sites.v3/code.org/views/how_ai_works_resources.haml
@@ -2,7 +2,7 @@
   .action-block.action-block--one-col.flex-space-between
     .content-wrapper
       %p.overline
-        =hoc_s(:module_label_self_paced)
+        =hoc_s(:teachers_label)
       %h3=hoc_s(:ai_pl_101_title)
       %img{src: "/images/self-paced-pl-tile-ai-101.jpg", alt: ""}
       %p=hoc_s(:ai_pl_101_desc)
