update string to low_cap version

--- a/shared/haml/user_header.haml
+++ b/shared/haml/user_header.haml
@@ -34,7 +34,7 @@
 - if show_create_menu
   .header_button.create_menu{id: "header_create_menu", tabindex: 0, role: "button"}
     %span.create_button
-      = I18n.t("#{loc_prefix}new_project")
+      = I18n.t("#{loc_prefix}new_project_low_cap")
     &nbsp;
     %i.create_menu_arrow_down{class: "fa fa-caret-down"}
     %i.create_menu_arrow_up{class: "fa fa-caret-up", style: "display: none"}
