--- a/pegasus/sites.v3/code.org/views/lms/lms_integration.haml
+++ b/pegasus/sites.v3/code.org/views/lms/lms_integration.haml
@@ -7,6 +7,6 @@
     %h3=hoc_s("lms_partner_page.ready.title", locals: {website: provider})
     %p=hoc_s("lms_partner_page.ready.list_01")
     %p=hoc_s("lms_partner_page.ready.list_02")
-    %a.link-button.has-external-link{href: provider == 'Schoology' ? "https://support.code.org/hc/en-us/articles/26677867056525-Getting-started-with-the-Code-org-Integration-for-Schoology" : "https://support.code.org/hc/en-us/articles/25938131265677-Getting-started-with-the-Code-org-Integration-for-Canvas"}
+    %a.link-button.has-external-link{href: provider == 'Schoology' ? "https://support.code.org/hc/en-us/articles/26677867056525-Getting-started-with-the-Code-org-Integration-for-Schoology" : "https://support.code.org/hc/en-us/articles/25938131265677-Getting-started-with-the-Code-org-Integration-for-Canvas", target: "_blank", rel: "noopener noreferrer"}
       = hoc_s("lms_page.get_started.call_to_action")
   .clear
