--- a/pegasus/sites.v3/code.org/public/lms/schoology.haml
+++ b/pegasus/sites.v3/code.org/public/lms/schoology.haml
@@ -6,14 +6,19 @@ theme: responsive_full_width
 %link{href: "/css/generated/design-system-pegasus.css", rel: "stylesheet"}
 %link{href: "/css/generated/page/lms-styles.css", rel: "stylesheet"}
 
-%section.alternating-rows
-  =view :"lms/lms_alternating_rows", provider: "Schoology"
+- provider_name = "Schoology"
 
-%section.bg-neutral-light
+%section.hero-banner-basic.bg-neutral-dark
+  = view :"lms/lms_partner_top_header", provider: provider_name
+
+%section.alternating-rows
+  =view :"lms/lms_alternating_rows", provider: provider_name
+
+%section#integration.bg-neutral-light
   .wrapper
     %h2.centered
-      =hoc_s("lms_partner_page.ready.heading", locals: {website: "Schoology"})
-    = view :"lms/lms_integration", provider: "Schoology"
+      =hoc_s("lms_partner_page.ready.heading", locals: {website: provider_name})
+    = view :"lms/lms_integration", provider: provider_name
 
 %section
   .wrapper
