--- a/pegasus/sites.v3/code.org/views/how_ai_works_resources.haml
+++ b/pegasus/sites.v3/code.org/views/how_ai_works_resources.haml
@@ -11,7 +11,7 @@
         %strong
           =hoc_s(:module_label_duration)
         =hoc_s(:module_duration_5_hrs)
-      %a.link-button{href: CDO.studio_url("/courses/self-paced-pl-ai-101")}
+      %a.link-button{href: CDO.studio_url("/courses/self-paced-pl-ai-101"), aria:{label: hoc_s(:aria_label_call_to_action_ai_101)}}
         =hoc_s(:call_to_action_start_module)
   .action-block.action-block--one-col.flex-space-between
     .content-wrapper
