--- a/pegasus/sites.v3/code.org/public/ai/teaching-assistant.haml
+++ b/pegasus/sites.v3/code.org/public/ai/teaching-assistant.haml
@@ -37,7 +37,7 @@ theme: responsive_full_width
 
 %section
   .wrapper
-    = view :section_basic_image_text, image_url: "/images/ai/page/teaching-assistant/ai-ta-focus-example.png", heading: hoc_s("ai_ta_page.focus.heading"), desc: hoc_s("ai_ta_page.focus.desc"), wrap_reverse: true
+    = view :section_basic_image_text, image_url: "/images/ai/page/teaching-assistant/ai-ta-focus-example.png", heading: hoc_s("ai_ta_page.focus.heading"), desc: hoc_s("ai_ta_page.focus.desc"), wrap_reverse: true, url: nil, urlText: nil
 
 %section.bg-primary-light
   .wrapper.flex-container.justify-space-between.align-items-center.gap-1.wrap
