--- a/pegasus/sites.v3/code.org/public/professional-learning/index.haml
+++ b/pegasus/sites.v3/code.org/public/professional-learning/index.haml
@@ -36,19 +36,19 @@ theme: responsive_full_width
 
 %section.no-padding-bottom
   .wrapper
-    = view :section_basic_image_text, image_url: "/images/fill-448x280/admins-page-pl.png", heading: hoc_s("pl_page.hands-on.heading"), desc: hoc_s("pl_page.hands-on.desc"), wrap_reverse: false
+    = view :section_basic_image_text, image_url: "/images/fill-448x280/admins-page-pl.png", heading: hoc_s("pl_page.hands-on.heading"), desc: hoc_s("pl_page.hands-on.desc"), wrap_reverse: false, url: nil, urlText: nil
 
 %section.no-padding-bottom
   .wrapper
-    = view :section_basic_image_text, image_url: "/images/fill-448x280/intl-pl-page-intro.png", heading: hoc_s("pl_page.pedagogy.heading"), desc: hoc_s("pl_page.pedagogy.desc"), wrap_reverse: true
+    = view :section_basic_image_text, image_url: "/images/fill-448x280/intl-pl-page-intro.png", heading: hoc_s("pl_page.pedagogy.heading"), desc: hoc_s("pl_page.pedagogy.desc"), wrap_reverse: true, url: nil, urlText: nil
 
 %section
   .wrapper
-    = view :section_basic_image_text, image_url: "/images/pl-page-educator-support.png", heading: hoc_s("pl_page.support.heading"), desc: hoc_s("pl_page.support.desc"), wrap_reverse: false
+    = view :section_basic_image_text, image_url: "/images/pl-page-educator-support.png", heading: hoc_s("pl_page.support.heading"), desc: hoc_s("pl_page.support.desc"), wrap_reverse: false, url: nil, urlText: nil
 
 %section
   .wrapper
-    = view :section_basic_image_text, image_url: "/images/fill-448x280/pl-page-share.png", heading: hoc_s("pl_page.share.heading"), desc: hoc_s("pl_page.share.desc"), wrap_reverse: true
+    = view :section_basic_image_text, image_url: "/images/fill-448x280/pl-page-share.png", heading: hoc_s("pl_page.share.heading"), desc: hoc_s("pl_page.share.desc"), wrap_reverse: true, url: nil, urlText: nil
 
 %section.bg-neutral-light
   .wrapper.centered
