--- a/pegasus/sites.v3/code.org/views/lms/lms_partner_top_header.haml
+++ b/pegasus/sites.v3/code.org/views/lms/lms_partner_top_header.haml
@@ -4,7 +4,7 @@
       =hoc_s("lms_partner_page.heading", locals: {website: provider})
     %p.white
       =hoc_s("lms_partner_page.desc", locals: {website: provider})
-    %a.link-button.has-external-link{href: '#integration'}
+    %a.link-button.white{href: '#integration'}
       =hoc_s(:call_to_action_get_started)
   %figure
     %img{src: provider == 'Schoology' ? "/images/lms/headerSchoology.png" : "/images/lms/headerCanvas.png", alt: "", style: "width: 100%; margin-block-start: -2rem; margin-inline-start: -2rem;"}
