--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -312,10 +312,15 @@ img.video_thumbnail {
     }
   }
 
+  #header_user_create_account {
+    background-color: $light_white;
+    color: $light_primary_500;
+    font-weight: $semi-bold-font-weight;
+  }
+
   .button-signin {
     text-decoration: none;
   }
-
   .project_updated_at {
     font-size: 10px;
     .project-save-error {
