--- a/dashboard/app/views/lti/v1/account_linking/landing.haml
+++ b/dashboard/app/views/lti/v1/account_linking/landing.haml
@@ -1,6 +1,8 @@
 - content_for(:head) do
   :ruby
     script_data = {}
+    lti_provider ||= params[:lti_provider]
+    email ||= params[:email]
     script_data[:lti_provider] = lti_provider
     script_data[:lti_provider_name] = Policies::Lti::LMS_PLATFORMS[lti_provider.to_sym][:name]
     script_data[:new_account_url] = new_user_registration_url
