P20-987: Enable cookie DCDO feature through the config.yml.erb

--- a/config/test.yml.erb
+++ b/config/test.yml.erb
@@ -66,3 +66,6 @@ statsig_api_client_key: !Secret
 statsig_server_secret_key: 'secret-fake-key'
 statsig_api_client_key: 'client-fake-key'
 <% end -%>
+
+# Enables DCDO settings via cookies
+cookie_dcdo: true
