--- a/shared/css/color.scss
+++ b/shared/css/color.scss
@@ -210,8 +210,10 @@ $light_gray_900: #3F444B;
 $light_affirmative_100: #E2F1E2;
 $light_affirmative_500: #3EA33E;
 
+$light_negative_100: #FBE0DD;
 $light_negative_500: #E5311A;
 
+$light_caution_100: #FEF7DF;
 $light_caution_500: #F9CB28;
 
 $light_info_100: #DCEFFB;
