--- a/pegasus/sites.v3/code.org/views/ai_carousel_curricula_blocks.haml
+++ b/pegasus/sites.v3/code.org/views/ai_carousel_curricula_blocks.haml
@@ -93,7 +93,7 @@
               = block_item[:overline]
             %h3
               = block_item[:title]
-            %img{src: "#{block_item[:img]}", alt: ""}
+            %img{src: block_item[:img], alt: ""}
             %p
               = block_item[:desc]
             %p
