--- a/dashboard/app/views/levels/edit.html.haml
+++ b/dashboard/app/views/levels/edit.html.haml
@@ -73,8 +73,8 @@
         %span.publishLevelErrorMessage{style: "display: none; color: red; margin-bottom: 10px; margin-right: 5px; line-height: 35px;"}
           = "There was an error - scroll to the bottom to see"
         %div.resetLevel{:style => "height: 35px; margin: 15px"}
-          = label_tag 'reset', 'Reset version history when saving and loading level', {:style => "display: inline; margin-top: 4px"}
-          = check_box_tag 'reset'
+          = label_tag 'reset', 'Reset version historys when saving and loading level', {:style => "display: inline; margin-top: 4px"}
+          = check_box_tag 'reset', 'yes', true
         = f.submit 'Save and publish your completed work', {:class => 'publishLevel', :style => "background-color: #f0c14b; margin-bottom: 10px; height: 35px"}
 
         %div{style: "display: flex; flex-direction: column; padding: 10px 10px 0px 10px"}
