--- a/dashboard/app/views/levels/edit.html.haml
+++ b/dashboard/app/views/levels/edit.html.haml
@@ -74,7 +74,7 @@
           = "There was an error - scroll to the bottom to see"
         %div.resetLevel{:style => "height: 35px; margin: 15px"}
           = label_tag 'reset', 'Reset version historys when saving and loading level', {:style => "display: inline; margin-top: 4px"}
-          = check_box_tag 'reset', 'yes', true
+          = check_box_tag 'reset', '1', true
         = f.submit 'Save and publish your completed work', {:class => 'publishLevel', :style => "background-color: #f0c14b; margin-bottom: 10px; height: 35px"}
 
         %div{style: "display: flex; flex-direction: column; padding: 10px 10px 0px 10px"}
