Use code.org domain for arrow images

--- a/apps/src/templates/certificates/congrats.module.scss
+++ b/apps/src/templates/certificates/congrats.module.scss
@@ -115,7 +115,7 @@ p.enterName {
 }
 
 .prevElNav {
-  background: url('//localhost.code.org:3000/images/carousel/prev.svg')
+  background: url('//code.org/images/carousel/prev.svg')
     no-repeat;
   left: 1rem;
   border: 0;
@@ -123,7 +123,7 @@ p.enterName {
 }
 
 .nextElNav {
-  background: url('//localhost.code.org:3000/images/carousel/next.svg')
+  background: url('//code.org/images/carousel/next.svg')
     no-repeat;
   right: 1rem;
   background-size: contain;
