--- a/config.yml.erb
+++ b/config.yml.erb
@@ -33,6 +33,9 @@ dashboard_clever_key:           !Secret
 dashboard_clever_secret:        !Secret
 dashboard_schoolproject_key:    !Secret
 dashboard_schoolproject_secret: !Secret
+dashboard_auth0_client_id: !Secret
+dashboard_auth0_secret: !Secret
+dashboard_auth0_domain: !Secret
 
 # Recaptcha
 recaptcha_site_key: !Secret
