P20-987: Fix DTT server issue

--- a/config.yml.erb
+++ b/config.yml.erb
@@ -331,7 +331,7 @@ dcdo_table_name:       dcdo_<%=env%>
 gatekeeper_table_name: gatekeeper_<%=env%>
 
 # Allows DCDO settings via cookies. See: 'dashboard/test/ui/features/cookie_dcdo.rb'
-cookie_dcdo: false
+use_cookie_dcdo: false
 
 # Poste (internal transactional email processing framework)
 poste_host: '<%= code_org_url.sub('//', '') %>'
