--- a/config/development.yml.erb
+++ b/config/development.yml.erb
@@ -75,4 +75,4 @@ openai_evaluate_rubric_api_key:
 mapbox_upload_tileset:    'censustiles-dev'
 
 # Enables DCDO settings via cookies
-cookie_dcdo: true
+use_cookie_dcdo: true
