--- a/config/test.yml.erb
+++ b/config/test.yml.erb
@@ -68,4 +68,4 @@ statsig_api_client_key: 'client-fake-key'
 <% end -%>
 
 # Enables DCDO settings via cookies
-cookie_dcdo: true
+use_cookie_dcdo: true
