Python Lab: UI idea
Just some rough work to mock up a UI idea.

--- a/apps/src/codebridge/Console/console.module.scss
+++ b/apps/src/codebridge/Console/console.module.scss
@@ -2,11 +2,11 @@
 
 .consoleContainer {
   grid-area: console;
-  color: $white;
+  //color: $white;
   margin: 0 5px 10px 0;
   overflow: hidden;
   height: 100%;
-  white-space: pre;
+  //white-space: pre;
 }
 
 .console {
