--- a/apps/src/codebridge/ControlButtons/control-buttons.module.scss
+++ b/apps/src/codebridge/ControlButtons/control-buttons.module.scss
@@ -7,7 +7,9 @@
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
-  background-color: $neutral_dark80;
+  //background-color: $neutral_dark80;
+  padding: 0;
+  height: 34px;
 }
 
 .controlButton {
