--- a/apps/src/aiComponentLibrary/suggestedPrompt/suggested-prompt.module.scss
+++ b/apps/src/aiComponentLibrary/suggestedPrompt/suggested-prompt.module.scss
@@ -2,10 +2,11 @@
 @import "font.scss";
 @import "@cdo/apps/componentLibrary/typography/typography.module";
 
-// Tags common styles
+.prompts {
+  display: flex;
+  column-gap: 0.5em;
 
-
-  .tag {
+  .prompt {
     display: flex;
     align-items: baseline;
     gap: 2px;
@@ -13,7 +14,7 @@
     padding: 2px 12px;
     background-color: $brand_primary_light;
     border-radius: 6.25rem;;
-    max-width: 15em;
+    max-width: 18em;
 
     span {
       white-space: nowrap;
@@ -32,60 +33,6 @@
 
     &:has(i:not(:first-child)) {
       padding-inline-end: 8px;
-    }
-  }
-
-// Sizes
-.tags-l {
-  .tag {
-    span {
-      @include overline-one;
-      line-height: 1.5;
-      margin-bottom: 0;
-      margin-top: 1.5px;
-    }
-
-    i {
-      font-size: 0.875rem;
-      line-height: 1.25;
-      width: 1.25rem;
-      height: 1.125rem;
-    }
-  }
-}
-
-.tags-m {
-  .tag {
-    span {
-      @include overline-two;
-      line-height: 1.54;
-      margin-bottom: 0;
-      margin-top: 2px;
-    }
-
-    i {
-      font-size: 0.75rem;
-      line-height: 1.25;
-      width: 1.125rem;
-      height: 0.9375rem;
-    }
-  }
-}
-
-.tags-s {
-  .tag {
-    span {
-      @include overline-three;
-      line-height: 1.8;
-      margin-bottom: 0;
-      margin-top: 1px;
-    }
-
-    i {
-      font-size: 0.625rem;
-      line-height: 1.25;
-      width: 1rem;
-      height: 0.8125rem;
     }
   }
 }
