--- a/dashboard/app/views/levels/editors/_pythonlab.html.haml
+++ b/dashboard/app/views/levels/editors/_pythonlab.html.haml
@@ -3,6 +3,7 @@
 = render partial: 'levels/editors/fields/bubble_choice_sublevel', locals: {f: f}
 = render partial: 'levels/editors/fields/help_and_tips', locals: {f: f}
 = render partial: 'levels/editors/fields/pythonlab_fields', locals: {f: f}
+= render partial: 'levels/editors/fields/predict_fields', locals: {f: f}
 = render partial: 'levels/editors/fields/sharing', locals: {f: f}
 = render partial: 'levels/editors/fields/special_level_types', locals: {f: f}
 = render partial: 'levels/editors/fields/audit_log', locals: {f: f}
