--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -262,7 +262,7 @@ img.video_thumbnail {
 
       @media (min-width: 1024px) and (max-width: 1268px) {
         &.hide-small-desktop {
-          display: none !important;
+          display: none;
         }
       }
     }
