--- a/shared/css/hamburger.scss
+++ b/shared/css/hamburger.scss
@@ -61,7 +61,7 @@ $arrow-size: 1.5rem;
     margin: 0;
     width: 290px;
     position: absolute;
-    top: 55px;
+    top: 64px;
     inset-inline-end: 0;
     background-color: $light_primary_500;
     max-height: 100vh;
@@ -193,6 +193,7 @@ $arrow-size: 1.5rem;
     padding: 10px 28px 16px 0;
     float: right;
     margin-top: 7px;
+    margin-inline-start: 3px;
     display: inline-block;
 
     %extend_burger {
