--- a/apps/src/templates/sectionProgressV2/expand-all-rows-dropdown.module.scss
+++ b/apps/src/templates/sectionProgressV2/expand-all-rows-dropdown.module.scss
@@ -15,10 +15,14 @@
 .menu {
   max-height: 200px;
   overflow-y: auto;
+  border-radius: 4px !important;
+  border: 1px solid $light_gray_400 !important;
 }
 
 .menuItem {
   display: flex;
   align-items: center;
   gap: 8px;
+  padding-top: 0 !important;
+  margin-top: 0 !important;
 }
