Add skinny banner for PL curriculum launch

--- a/pegasus/sites.v3/code.org/public/professional-learning/elementary.haml
+++ b/pegasus/sites.v3/code.org/public/professional-learning/elementary.haml
@@ -8,6 +8,8 @@ theme: responsive_full_width
 
 %link{href: "/css/generated/design-system-pegasus.css", rel: "stylesheet"}
 
+= view :pl_curriculum_launch_banner
+
 %section
   .wrapper
     %h1=hoc_s("pl_page_k5.heading")
