--- a/pegasus/sites.v3/code.org/public/professional-learning/index.haml
+++ b/pegasus/sites.v3/code.org/public/professional-learning/index.haml
@@ -6,6 +6,8 @@ theme: responsive_full_width
 %link{href: "/css/generated/design-system-pegasus.css", rel: "stylesheet"}
 %link{href: "/css/generated/page/professional-learning-styles.css", rel: "stylesheet"}
 
+= view :pl_curriculum_launch_banner
+
 %section.top
   .wrapper
     .text-wrapper.col-50
