--- a/pegasus/sites.v3/code.org/public/professional-learning/middle-high.haml
+++ b/pegasus/sites.v3/code.org/public/professional-learning/middle-high.haml
@@ -9,6 +9,7 @@ theme: responsive_full_width
 %link{href: "/css/generated/design-system-pegasus.css", rel: "stylesheet"}
 
 = view :analytics_event_log_helper, event_name: AnalyticsConstants::MIDDLE_AND_HIGH_SCHOOL_PL_PAGE_VISITED_EVENT
+= view :pl_curriculum_launch_banner
 
 %section.top
   .wrapper
