--- a/apps/src/lib/ui/lti/link/LtiLinkAccountPage/link-account.module.scss
+++ b/apps/src/lib/ui/lti/link/LtiLinkAccountPage/link-account.module.scss
@@ -13,6 +13,11 @@
   width: 100%;
 }
 
+.cancelButtonContainer {
+  display: flex;
+  justify-content: flex-end;
+}
+
 // Increase specificity to override base button
 .cardSecondaryButton.cardSecondaryButton {
   border: 1px solid #292F36
